# dev-watcher

./: .gitignore  README.md  pyproject.toml
devwatcher/: cli.py  config.py  daemon.py  db.py  processor.py  sanitizer.py
devwatcher/providers/: anthropic.py  base.py  gemini.py
devwatcher/watchers/: files.py  git.py  window.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_db.py  test_e2e.py  test_file_watcher.py  test_git_poller.py  test_processor.py  test_providers.py  test_sanitizer.py  test_window_watcher.py
